# Apim-Samples

./: $null  .codespaces.json  .dockerignore  .editorconfig  .env-example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pylintrc  AGENTS.md  CONTRIBUTING.md  POST-MIGRATION-CHECKLIST.md  README.md  SECURITY.md  TROUBLESHOOTING.md  apim-samples.code-workspace  coverage.json  pylint_output.json  pylint_shared.json  pyproject.toml  pytest.ini  requirements.txt  start.ps1  start.sh  test-environment.ipynb  test-openssl-cert.ps1  verify-devcontainer.py
.devcontainer/: CODESPACES-QUICKSTART.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MOUNT-FIXES.md  README.md  SETUP-NOTES.md  SETUP_SUMMARY.md  configure-azure-mount.ps1  configure-azure-mount.py  configure-azure-mount.sh  configure-python-interpreter.py  devcontainer.json  devcontainer.json.backup  dockerfile-optimizations.md  image-optimization.md  post-start-light.sh  post-start-setup-2.sh  post-start-setup.sh  post-start-simple.sh  post-start.sh  python-environment-setup.md  setup.ps1  setup.sh  test_config.py  test_mount.py  test_mount_logic.py  true-prebuild.md  verify-setup.py
.github/: .copilot-instructions.md  CODEOWNERS  bicep.instructions.md  copilot-instructions.bicep.md  copilot-instructions.md  copilot-instructions.python.md  dependabot.yml  github-workflows.instructions.md  json.instructions.md  markdown.instructions.md  python.instructions.md  scorecard.yml
assets/: APIM-Samples-Presentation-Outline.md  APIM-Samples-Slide-Deck.html  live-reload.js  site.webmanifest
docs/: README.md  UV-MIGRATION.md  index.html  robots.txt  sitemap.xml  styles.css
setup/: README.md  clean-local-artifacts.ps1  clean-local-artifacts.sh  export_presentation.py  local_setup.py  normalize_notebook_metadata.py  serve_presentation.py  serve_website.py  setup_python_path.py  verify_local_setup.py
shared/: azure-roles.json
tests/: README.md  Test-Matrix.md
tools/: disable_c0415_in_tests.py  fix_trailing_whitespace.py
(+331 files in other folders)
