[project]
name = "apim-samples"
version = "0.0.0"
description = "Azure API Management Samples: infra + policy playground"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Azure Samples" }]
license = { file = "LICENSE" }

# Core runtime dependencies
dependencies = [
  "pillow>=12.1.1",   # Resolves CVE 2021-25289: https://pillow.readthedocs.io/en/stable/releasenotes/12.1.1.html#security
  "ipykernel",
  "matplotlib",
  "pandas",
  "pyjwt",
  "python-dotenv",
  "requests",
]

[dependency-groups]
# Developer tooling (installed automatically by default with `uv sync`)
dev = [
  "pylint>=4.0.0",
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
  "coverage>=7.6.4",
]
